<resources>
    <string name="app_name">TOEIC SUCCESS</string>
    <string name="title_home">Home</string>
    <string name="title_600_TOEIC_words">600 Essential TOEIC Words</string>
    <string name="title_settings">Settings</string>
    <string name="title_categories">Categories</string>
    <string name="title_game">Game</string>
    <string name="level_never">Never</string>
    <string name="title_trial_test">Trial test</string>
    <string name="title_test_full">Test Full</string>
    <string name="title_test_skill">Test Skills</string>
    <string name="title_vocabulary">Vocabulary</string>
    <string name="title_grammar">Grammar</string>
    <string name="title_lecture">Lecture</string>
    <string name="title_study">Study</string>
</resources>
