<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_100">

        <TextView
            android:id="@+id/textHome"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_home"
            android:gravity="center_vertical"
            android:text="@string/title_home" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/textTitleTrialTest"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_trial_test"
            android:textColor="@color/colorStrongGray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/textTabTestFull"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_exam_full"
            android:gravity="center_vertical"
            android:text="@string/title_test_full" />

        <TextView
            android:id="@+id/textTabTestSkill"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_exam"
            android:gravity="center_vertical"
            android:text="@string/title_test_skill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/textTitleVocabulary"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_600_TOEIC_words"
            android:textColor="@color/colorStrongGray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/textTabVocabulary"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vocabulary"
            android:text="@string/title_vocabulary" />

        <TextView
            android:id="@+id/textTabGame"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_game"
            android:text="@string/title_game" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/textTitleGrammar"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_grammar"
            android:textColor="@color/colorStrongGray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/textTabGrammar"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_grammar"
            android:text="@string/title_grammar" />

        <TextView
            android:id="@+id/textTabLecture"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lecture"
            android:text="@string/title_lecture" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/textTitleSettings"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            android:textColor="@color/colorStrongGray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/textSettings"
            style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_settings"
            android:text="@string/title_settings" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
